[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "objutils"
version = "0.10.13"
description = "Objectfile library for Python"
authors = [
    {name = "Christoph Schueler", email = "cpu12.gems@googlemail.com"}
]
license = {text = "GPL-2.0-only"}
readme = "docs/README.rst"
requires-python = ">=3.10,<4.0"
classifiers = [
	# How mature is this project? Common values are
	#   3 - Alpha
	#   4 - Beta
	#   5 - Production/Stable
	"Development Status :: 4 - Beta",
	# Indicate who your project is intended for
	"Intended Audience :: Developers",
	"Topic :: Software Development",
	"Topic :: Scientific/Engineering",
	# Pick your license as you wish (should match "license" above)
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	# Specify the Python versions you support here. In particular, ensure
	# that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: 3.15",
]

keywords=[
	"hex files",
	"intel hex",
	"s19",
	"srec",
	"srecords",
	"object files",
	"map files",
	"embedded",
	"microcontroller",
	"ECU",
	"shf",
	"rfc4194",
]

dependencies = [
	"construct>=2.10.70",
	"mako>=1.3.3",
	"sqlalchemy>=2.0.29",
	"rich>=14.2",
	"numpy>=2.2.5",
	"ufilename (>=0.1.1,<0.2.0)",
]

[project.urls]
Repository = "https://www.github.com/Christoph2/objutils"

[project.scripts]
oj-elf-info = "objutils.scripts.oj_elf_info:main"
oj-elf-syms = "objutils.scripts.oj_elf_syms:main"
oj-hex-info = "objutils.scripts.oj_hex_info:main"
oj-hex-merge = "objutils.scripts.oj_hex_merge:main"
oj-hex-split = "objutils.scripts.oj_hex_split:main"
oj-elf-arm-attrs = "objutils.scripts.oj_elf_arm_attrs:main"
oj-elf-extract = "objutils.scripts.oj_elf_extract:main"
oj-elf-import = "objutils.scripts.oj_elf_import:main"
oj-dwarf-import = "objutils.scripts.oj_dwarf_import:main"
oj-dwarf-info = "objutils.scripts.oj_dwarf_info:main"
oj-coff-info = "objutils.scripts.oj_coff_info:main"
oj-coff-syms = "objutils.scripts.oj_coff_syms:main"
oj-coff-extract = "objutils.scripts.oj_coff_extract:main"
oj-coff-import = "objutils.scripts.oj_coff_import:main"
arduino-build-artifacts = "objutils.scripts.arduino_build_artifacts:main"

[project.optional-dependencies]
dev = [
	"bumpver>=2023.1129",
	"pre-commit>=3.7.0",
	"pytest>=8.1.1,<10.0.0",
	"black>=24.10,<27.0",
	"ruff>=0.6.9",
	"pyupgrade>=3.17.0",
	"bandit>=1.7.10",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
addopts = "--verbose --tb=short --junitxml=result.xml -o junit_family=xunit2"
testpaths = "objutils/tests"

[tool.scikit-build]
wheel.packages = ["objutils"]
wheel.exclude = []

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true


[tool.ruff]
line-length = 132
[tool.ruff.lint]
ignore = ["I001"]
unfixable = ["B"]

[tool.black]
line-length=132
include = '\.pyi?$'


[tool.cibuildwheel]
build-verbosity = 3
build = "cp3{10,11,12,13,14,15}-*"
skip = ["*_i686", "*-musllinux*"]
build-frontend = "build"

[tool.bumpver]
current_version = "0.10.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"objutils/__init__.py" = [
    '__version__ = "{version}"',
]
"objutils/version.py" = [
    '__version__ = "{version}"',
]
